--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --mode=production",
-    "watch": "webpack --progress --watch"
+    "build": "webpack"
   },
   "author": "Clifford Mapesa",
   "license": "MIT",
